--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,11 +1,17 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>frontend</title>
+    <title>MyVibe – Listen, Create, and Share Your Music Vibes</title>
+    <meta name="description" content="Discover, play, and organize your favorite music with MyVibe. Create custom playlists and enjoy a seamless listening experience." />
+    <meta name="author" content="MyVibe" />
+    <meta name="keywords" content="music, playlist, streaming, audio player, songs, music library" />
+
+    <meta property="og:title" content="MyVibe – Your Personal Music Playlist App" />
+    <meta property="og:description" content="Create and manage your music playlists with MyVibe. Listen to your favorite tracks anytime, anywhere." />
   </head>
+
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
