--- a/frontend/index.html
+++ b/frontend/index.html
@@ -10,6 +10,9 @@
 
     <meta property="og:title" content="MyVibe – Your Personal Music Playlist App" />
     <meta property="og:description" content="Create and manage your music playlists with MyVibe. Listen to your favorite tracks anytime, anywhere." />
+    <meta property="og:type" content="website" />
+
+    <meta name="twitter:card" content="summary_large_image" />
   </head>
 
   <body>
